syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./quiz_schema";

package quiz_schema;


service QuizGrpc {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetQuizEntries (google.protobuf.Empty) returns (QuizResponse) {}
    rpc SubmitQuiz (QuizSubmitRequest) returns (QuizSubmitResponse) {}
  }

message AnswerOption {
  int32 id = 1;
  string text = 2;
}

message QuizQuestion {
  int32 id = 1;
  string text = 2;
}

message QuizEntry {
  QuizQuestion question = 1;
  repeated AnswerOption answers = 2;
}

message QuizResponse {
  int32 quiz_id = 1;
  repeated QuizEntry quiz_entries = 2;
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  int32 status = 1;
}

message QuizSubmitEntry {
  int32 question_id = 1;
  int32 answer_id = 2;
}

message QuizSubmitRequest {
  string name = 1;
  int32 quiz_id = 2;
  repeated QuizSubmitEntry submissions = 3;
}

message QuizSubmitResponse {
  int32 correct_answers = 1;
  float rank = 2;
}
